--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,22 @@
   		<version>2015.06.2</version>
   	</dependency>
   </dependencies>
+  <build>
+  	<plugins>
+      <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+      </plugin>
+  	</plugins>
+  </build>
 </project>
